Add department endpoint
